Fixing spacing for topic card titles

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -7977,10 +7977,10 @@ a[href*="http"] .article-header__date {
   grid-row: 2/-1;
   content: ' ';
   background: #fff;
-  height: 148px;
+  height: 100px;
   -ms-flex-item-align: end;
       align-self: end;
-  margin-top: -148px; }
+  margin-top: -100px; }
 
 .topics-list__topics-wrapper {
   position: relative; }
@@ -8032,7 +8032,7 @@ a[href*="http"] .article-header__date {
   .topics-list__topics.slick-slider .slick-slide {
     width: 340px; }
   .topics-list__topics.slick-slider .topic-card span {
-    padding: 16px 0; }
+    padding: 16px; }
     @media (max-width: 599px) {
       .topics-list__topics.slick-slider .topic-card span {
         padding: 16px 11px; } }
@@ -8047,8 +8047,7 @@ a[href*="http"] .article-header__date {
   height: 350px;
   float: left;
   position: relative;
-  margin-bottom: 60px;
-  overflow: hidden; }
+  margin-bottom: 60px; }
   .topic-card a {
     display: inline-block;
     height: 350px;
@@ -8068,7 +8067,7 @@ a[href*="http"] .article-header__date {
   .topic-card span {
     display: block;
     position: absolute;
-    bottom: -12px;
+    bottom: -60px;
     left: calc(100% - 301px);
     background: #fff;
     width: 220px;
