--- a/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
@@ -78,9 +78,9 @@
   grid-row: 2/-1;
   content: ' ';
   background: $white;
-  height: 148px;
+  height: 100px;
   align-self: end;
-  margin-top: -148px;
+  margin-top: -100px;
 }
 .topics-list__topics-wrapper {
   position: relative;
@@ -112,7 +112,7 @@
   }
 
   .topic-card span {
-    padding: 16px 0;
+    padding: 16px;
 
     @include breakpoint($new-x-small-max) {
       padding: 16px 11px;
@@ -140,7 +140,7 @@
   float: left;
   position: relative;
   margin-bottom: 60px;
-  overflow: hidden;
+  //overflow: hidden;
   a {
     @include link-colors($c-navy, $c-blue);
     display: inline-block;
@@ -155,7 +155,7 @@
   span {
     display: block;
     position: absolute;
-    bottom: -12px;
+    bottom: -60px;
     left: calc(100% - 301px);
     background: $white;
     width: 220px;
